Fix senior program logos to match sizes on mobile

--- a/site/styles/Index.module.css
+++ b/site/styles/Index.module.css
@@ -1432,7 +1432,7 @@
   }
 
   .seniorProgramLogo {
-    width: auto;
+    width: 160px;
   }
 
   .specialPricingGrid {
